# exchange

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml  schema.yml
core/: urls.py  utils.py
core/settings/: __init__.py  base.py  development.py  local.py  staging.py
currency/: models.py
currency/migrations/: 0001_initial.py  0002_currency_price.py
fixtures/: currencies.json
order/: consts.py  exceptions.py  models.py  serializers.py  urls.py  views.py
order/exchanges/: binance.py  exchanges_interface.py  ftx.py
order/migrations/: 0001_initial.py  0002_initial.py
order/services/: order.py
user/: models.py
user/migrations/: 0001_initial.py
wallet/: consts.py  models.py  serializers.py  urls.py  views.py
wallet/migrations/: 0001_initial.py  0002_alter_transaction_transaction_type.py  0003_alter_wallet_currency.py
