[tool.poetry]
name = "abantether"
version = "0.1.0"
description = ""
authors = ["Alireza Fathi <alirezafathi.ce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.9"
django-request-logging = "^0.7.5"
gunicorn = "^23.0.0"
drf-spectacular = "^0.27.2"
python-dotenv = "^1.0.1"
drf-spectacular-sidecar = "^2024.11.1"
python-json-logger = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
